# lacuna

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE_COMMERCIAL  PREDICTIONS.md  README.md  SECURITY.md  paper.bib  paper.md  pyproject.toml  run_5ht2a_boltz.py  run_adra2a_boltz.py  run_ctnnb1_boltz.py  run_egfr_benchmark.py  run_kras_g12d_boltz.py  run_myc_benchmark.py  run_sensitivity_analysis.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
benchmarks/: boltz_nearmiss.py  boltz_nearmiss_results.json  compare_detectors_cryptobench.py  compare_fpocket.py  compare_fpocket_cryptobench.py  compare_p2rank.py  cryptic_benchmark.py  cryptic_benchmark_results.json  cryptobench_benchmark.py  detectors_cb_baselines.jsonl  detectors_cb_lacuna.jsonl  extract_features.py  fpocket_comparison.json  fpocket_cryptobench_comparison.json  metrics.py  pocketminer_benchmark.py  run_benchmarks.py  train_reranker.py
benchmarks/experiments/: metadynamics_cv.py  swish_md.py
docs/: BENCHMARKS.md
examples/: kras_cryptic.py
lacuna/: __init__.py  cli.py  models.py
lacuna/ensemble/: base.py  boltz_backend.py  nma_backend.py  openmm_backend.py  random_backend.py
lacuna/io/: structure.py  writers.py
lacuna/pockets/: __init__.py  clusterer.py  detector.py  p2rank_detector.py  scorer.py
tests/: test_cli.py  test_clusterer.py  test_detector.py  test_ensemble.py  test_homodimer.py  test_metrics.py  test_p2rank_detector.py  test_scorer.py  test_writers.py
