[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lacuna-pockets"
version = "0.1.1"
description = "Cryptic binding pocket discovery via conformational ensemble analysis"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Clayton Moore" }]
keywords = ["drug-discovery", "protein-structure", "cryptic-pockets", "cheminformatics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "biopython>=1.81",
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
openmm = ["openmm>=8.0", "pdbfixer>=1.9"]
boltz = ["boltz>=0.4"]
all = ["lacuna-pockets[openmm]", "lacuna-pockets[boltz]"]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
lacuna = "lacuna.cli:main"

[project.urls]
Homepage = "https://github.com/mooreneural/lacuna"
Repository = "https://github.com/mooreneural/lacuna"
Issues = "https://github.com/mooreneural/lacuna/issues"

[tool.hatch.build.targets.wheel]
packages = ["lacuna"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
